Replaced lorem with text in the home page and removed some unnecessary files

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,10 +60,7 @@
                     <h1 style="margin:20px; font-size: 23px; color:rgba(255, 0, 0, 0.747) ;">Welcome, <%= name %>!</h1>
                 <% } %>
                 <div class="content">
-                    <p style="margin-top: 200px; margin-left: 10%; width: 30%; display: inline-block;">Lorem ipsum dolor
-                        sit amet consectetur adipisicing elit. Accusamus aliquid ab placeat eveniet fuga natus
-                        voluptatem eligendi hic a, nihil, inventore odit recusandae molestiae error similique
-                        dignissimos vitae cumque cupiditate?
+                    <p style="margin-top: 200px; margin-left: 10%; width: 30%; display: inline-block;">Our student planner website is designed to help you stay organized and focused on your academic goals. With our intuitive task management tool, you can easily add, track, and complete your school assignments and exams. Our user-friendly interface allows you to prioritize your tasks, set reminders, and create a personalized study schedule that works for you. Say goodbye to the stress and chaos of keeping track of your schoolwork and hello to a more productive, successful academic life. Our planner website is your ultimate study buddy that will help you achieve your academic dreams. Try it out today and see the difference it can make!
                     </p>
                     <img id="img1" src="/Assets/study4.jpg" alt="">
                 </div>
@@ -79,20 +76,11 @@
                         <h2 style="text-align: center" >Organize your work</h2>
                     </div>
                     <div class="text">
-                        <p style="text-align: center; margin-top: 15px; width: 270px; display: inline-block;">Lorem ipsum dolor
-                            sit amet consectetur adipisicing elit. Accusamus aliquid ab placeat eveniet fuga natus
-                            voluptatem eligendi hic a, nihil, inventore odit recusandae molestiae error similique
-                            dignissimos vitae cumque cupiditate?
+                        <p style="text-align: center; margin-top: 15px; width: 270px; display: inline-block;">Planning your studies is essential for academic success, and our student planner website is here to help. With our planner tool, you can easily create a personalized study schedule that fits your needs and preferences. 
                         </p>
-                        <p style="text-align: center; margin-top: 15px; width: 270px;  display: inline-block;">Lorem ipsum dolor
-                            sit amet consectetur adipisicing elit. Accusamus aliquid ab placeat eveniet fuga natus
-                            voluptatem eligendi hic a, nihil, inventore odit recusandae molestiae error similique
-                            dignissimos vitae cumque cupiditate?
+                        <p style="text-align: center; margin-top: 15px; width: 270px;  display: inline-block;">Staying focused is crucial for achieving academic success, but it can be a challenge in our fast-paced world. With our task management tool, you can prioritize your assignments and schedule dedicated study time
                         </p>
-                        <p style="text-align: center; margin-top: 15px; width: 270px; display: inline-block;">Lorem ipsum dolor
-                            sit amet consectetur adipisicing elit. Accusamus aliquid ab placeat eveniet fuga natus
-                            voluptatem eligendi hic a, nihil, inventore odit recusandae molestiae error similique
-                            dignissimos vitae cumque cupiditate?
+                        <p style="text-align: center; margin-top: 15px; width: 270px; display: inline-block;">Organizing your work is a key part of academic success, and our student planner website is designed to make it easy. With our task management tool, you can keep track of your assignments and exams, and prioritize them based on their importance and due dates. 
                         </p>
                     </div>
                 </div>
