Adding some more things in the Grade Calculator page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -153,6 +153,7 @@
                     <br>
                     <div class="hr"></div>
                 </div>
+                <h3>How many tests is your module or subject split into</h3>
             </div>
             <!---- Login page and registration page ---->
             <div id="login-reg" class="page" data-page="4">
