--- a/public/style.css
+++ b/public/style.css
@@ -529,7 +529,8 @@ input[type="checkbox"]:checked {
 
 .hr {
     /* border:none; */
-    width: 100%;
+    width: 90%;
     height: 2px;
     background-color: black;
+    margin: auto;
 }
