--- a/views/index.ejs
+++ b/views/index.ejs
@@ -200,9 +200,7 @@
                 </div>
                 <!-- Button to calculate the grade of the student :  -->
                 <button id="calculateGrade">Calculate</button>
-                <div style="width: 100%; height: 50px; background:black;">
-                        
-                </div>
+                <div style="position: absolute; bottom: 0; width: 100%; height: 50px; background:black;"></div>
             </div>
             <!---- Login page and registration page ---->
             <div id="login-reg" class="page" data-page="4">
