--- a/public/style.css
+++ b/public/style.css
@@ -80,6 +80,25 @@ main {
     justify-content: center;
 } */
 
+#registrationDiv{
+    display: flex;
+    justify-content: center;
+}
+
+#registration-form{
+    width: 800px;
+}
+
+#loginDiv{
+    display: flex;
+    justify-content: center;
+}
+
+#login-form{
+    width: 800px;
+}
+
+
 /* Style the close button */
 .closebtn:hover {
     color: black;
@@ -102,10 +121,7 @@ main {
 }
 
 /* Full-width input fields */
-input[type=text],
-input[type=password],
-input[type=name],
-input[type=age] {
+.inps {
     width: 100%;
     padding: 10px;
     margin: 10px 0px 22px 0px;
@@ -134,8 +150,10 @@ hr {
     margin: 0px 0;
     border: none;
     cursor: pointer;
-    width: 100%;
+    width: 40%;
     opacity: 0.9;
+    border-radius: 5px;
+    margin-top: 25px;
 }
 
 .registerbtn:hover {
@@ -240,6 +258,7 @@ a {
 
 /*     Styling the dashboard page here :     */
 .task-handler {
+    position: relative;
     margin: 30px;
     width: 28%;
     height: max-content;
@@ -483,7 +502,7 @@ a {
 }
 
 .footer {
-    margin-top: 80px;
+    margin-top: 60px;
     width: 100%;
     height: 50px;
     background: #04043f;
@@ -540,7 +559,7 @@ input[type="checkbox"]:checked {
 #calculateGrade {
     position: absolute;
     left: 44%;
-    bottom: 10%;
+    bottom: -35%;
     width: 12%;
     height: 7%;
     background: #f84c40;
@@ -548,7 +567,7 @@ input[type="checkbox"]:checked {
     border-radius: 10px;
     border: none;
     cursor: pointer;
-    margin-top: 150px;
+    /* margin-top: 150px; */
 }
 
 #calculateGrade:hover {
@@ -563,6 +582,28 @@ input[type="checkbox"]:checked {
     color: crimson;
 }
 
-.question {
-    margin-top: 150px;
+.questions{
+    margin: 40px;
 }
+
+.question {
+    margin-top: 200px;
+}
+
+input[type=number] {
+    width: 70px;
+    height: 40px;
+} 
+
+.testInfo{
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.testInputs{
+    width: 60px;
+    height: 30px;
+    text-align: center;
+}
+
